# pytorch-submodule

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/abs/: main.cpp
examples/acos/: main.cpp
patches/: linspace_kernel.patch
